Fri Nov 01 17:20:38 2002  George Lebl <jirka@5z.com>

	* Release 0.5.0

Fri Nov 01 14:22:49 2002  George Lebl <jirka@5z.com>

	* src/matrixw.c, src/mpwrap.c, src/plugin.c: Some leak hunting,
	  probably many leaks still left

Fri Nov 01 11:58:39 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: add a Combinations and Permutations function.  Also
	  fix checking for integers if complex numbers are passed

	* lib/linear_algebra/linear_algebra.gel,
	  lib/linear_algebra/misc.gel:  Whack GAMMA (use Combinations name),
	  and fix some other naming, fix complex DotProduct add InnerProduct
	  alias, switch arguemnts on JordanBlock, add OuterProduct of
	  vectors, clean up norms to reduce it to 2 functions

	* src/eval.c, src/matop.[ch], src/structs.h: Implement basic modular
	  arithmetic.  Not currently too smart but usable for basic modulo
	  operations. 

Wed Oct 30 15:40:09 2002  George Lebl <jirka@5z.com>

	* src/eval.c: fix optimization of the matrix expansion for 1x1
	  matrices

Wed Oct 30 15:37:24 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/misc.gel: Submatrix functions always return
	  a matrix

	* src/dict.[ch], src/calc.c, src/eval.[ch], src/funclib.c,
	  src/compil.c, parseutil.c, structs.h:  don't do local variable
	  substitution on function nodes.  Rather push them onto a special
	  stack (this bit is ugly) and then add a special dictionary
	  to the function on context pop with the local vars.  This
	  should work a lot nicer then the replacing that was going on
	  before.

Wed Oct 30 11:27:40 2002  George Lebl <jirka@5z.com>

	* src/calc.c, src/eval.[ch], src/funclib.c, src/lexer.l, src/parse.y,
	  src/matrixw.[ch], src/parseutil.[ch]:  Add the : operator like
	  matlab has and accept vectors rather then just ranges for indexes
	  of matrices.  Also add IndexComplement to the builtin functions

	* src/gnome-genius.c: minor cleanup

	* src/geniustest.pl, src/geniustests.txt: update test suite

	* lib/*/*.gel: update for the new syntax
