@@ -471,3 +471,5 @@ IndexComplement (3,4)						`[1,2,4]
 IndexComplement (1,1)+1						((null)+1)
 function w(h) = (function a(x) = h+x ; a) ; w(7) call (3)	10
 function w(h) = (function a(x) = h+x ; a(7)) ; w(7)		14
+3 mod 2								1
+[3,2] mod 2							[1,0]
