@@ -332,20 +332,22 @@ gel_value_matrix_gauss(GelMatrixW *m, gboolean reduce, gboolean uppertriang, gbo
 			}
 		}
 
-		for(ii=i+1;ii<gel_matrixw_width(m);ii++) {
-			GelETree *t = gel_matrixw_set_index(m,ii,d);
-			if(t) {
-				mpw_div(t->val.value,
-					t->val.value,
-					piv->val.value);
+		if (reduce) {
+			for(ii=i+1;ii<gel_matrixw_width(m);ii++) {
+				GelETree *t = gel_matrixw_set_index(m,ii,d);
+				if(t) {
+					mpw_div(t->val.value,
+						t->val.value,
+						piv->val.value);
+				}
 			}
-		}
-		if(detop)
-			mpw_div(detop,detop,piv->val.value);
-		if(simul)
-			div_row(simul,d,piv->val.value);
+			if(detop)
+				mpw_div(detop,detop,piv->val.value);
+			if(simul)
+				div_row(simul,d,piv->val.value);
 
-		mpw_set_ui(piv->val.value,1);
+			mpw_set_ui(piv->val.value,1);
+		}
 		d++;
 	}
 	
