@@ -1,3 +1,14 @@
+Sat Nov 23 10:13:15 2002  George Lebl <jirka@5z.com>
+
+	* lib/linear_algebra/*.gel: add RaleighQuotient, and reverse the
+	  direction of the vandermonde matrix so that we fit with how
+	  we are doing polynomials
+
+	* src/eval.c: fix modular arithmetic on single values, and fix
+	  modular arithmetic on matrices
+
+	* src/funclib.c: cache identity matrices
+
 Fri Nov 01 17:20:38 2002  George Lebl <jirka@5z.com>
 
 	* Release 0.5.0
